--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+# ----- Write final Podfile content (UTF-8 without BOM) -----
+$pod = @'
 platform :ios, '15.5'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -14,19 +16,14 @@ end
 
 require File.expand_path(File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper'), __FILE__)
 
-# 👇 This line is the key: generate module maps for non-modular pods so Swift can import them.
+# Generate module maps for non-modular pods so Swift static pods integrate cleanly.
 use_modular_headers!
 
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Keep default static linkage for Flutter pods (no `use_frameworks!`).
+  # Keep default static linkage for Flutter pods (do not add `use_frameworks!`).
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
-  # If you ever pin pods manually, you can force modular headers per-pod like:
-  # pod 'GoogleUtilities', :modular_headers => true
-  # pod 'FirebaseCore', :modular_headers => true
-  # ...but the global use_modular_headers! above already covers them.
 end
 
 post_install do |installer|
@@ -38,3 +35,11 @@ post_install do |installer|
     end
   end
 end
+'@
+
+# Write without BOM
+$utf8NoBom = New-Object System.Text.UTF8Encoding($false)
+[IO.File]::WriteAllText("ios\Podfile", $pod, $utf8NoBom)
+
+# Sanity: show any leftover conflict markers (should be none)
+Select-String -Path "ios\Podfile" -Pattern '^[<>=]{7}' -Encoding UTF8 -List | ForEach-Object { $_.Line } | Write-Host
