--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,8 @@
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
-# App  "version: $($matches[1])+$([int]$matches[2]+1)" 
- "version: $($matches[1])+$([int]$matches[2]+1)" 
+# App version (bump this when triggering new builds)
+version: 1.0.0+112
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -39,6 +39,3 @@ flutter:
   # assets:
   #   - assets/
   #   - assets/images/
-
-
-
