--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
 # App version (bump this when triggering new builds)
-version: 1.0.0+112
+ "version: $($matches[1])+$([int]$matches[2]+1)" 
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -39,3 +39,4 @@ flutter:
   # assets:
   #   - assets/
   #   - assets/images/
+
