--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,7 @@
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
-# App version (bump this when triggering new builds)
- "version: $($matches[1])+$([int]$matches[2]+1)" 
+version: 1.0.0+110
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -39,4 +38,3 @@ flutter:
   # assets:
   #   - assets/
   #   - assets/images/
-
