--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
-version: 1.0.0+116
+ "version: $($matches[1])+$([int]$matches[2]+1)" 
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
@@ -38,3 +38,4 @@ flutter:
   # assets:
   #   - assets/
   #   - assets/images/
+
