--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,26 +6,25 @@ project 'Runner', { 'Debug' => :debug, 'Profile' => :release, 'Release' => :rele
 install! 'cocoapods', :warn_for_unused_master_specs_repo => false
 
 def flutter_root
-  generated = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
+  generated = File.expand_path(File.join('..','Flutter','Generated.xcconfig'), __FILE__)
   raise "Run `flutter pub get` first." unless File.exist?(generated)
   File.foreach(generated) { |line| return $1.strip if line =~ /FLUTTER_ROOT=(.*)/ }
   raise "FLUTTER_ROOT not found in Generated.xcconfig"
 end
 
-require File.expand_path(File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper'), __FILE__)
+require File.expand_path(File.join(flutter_root,'packages','flutter_tools','bin','podhelper'), __FILE__)
 
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Keep default static linkage for Flutter pods (do NOT add `use_frameworks!`).
+  # Keep default static linkage for Flutter pods (do NOT add use_frameworks!).
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    # Flutter’s standard extra settings (header search paths, Swift flags, etc.)
+    # Flutter's standard extra settings (header search paths, Swift flags, etc.)
     flutter_additional_ios_build_settings(target)
-
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
