--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,54 +1,41 @@
-Set-Location C:\flutter_projects\first_flutter_app
+﻿source "https://cdn.cocoapods.org/"
 
-$pod = @"
-# Use the CocoaPods CDN for reliability/speed
-source 'https://cdn.cocoapods.org/'
+platform :ios, "15.5"
+ENV["COCOAPODS_DISABLE_STATS"] = "true"
 
-platform :ios, '15.5'
-ENV['COCOAPODS_DISABLE_STATS'] = 'true'
-
-project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
-  'Release' => :release,
+project "Runner", {
+  "Debug" => :debug,
+  "Profile" => :release,
+  "Release" => :release,
 }
 
-# Clean, deterministic installs on CI
-install! 'cocoapods', :warn_for_unused_master_specs_repo => false
+install! "cocoapods", :warn_for_unused_master_specs_repo => false
 
 def flutter_root
-  generated = File.expand_path(File.join('..','Flutter','Generated.xcconfig'), __FILE__)
+  generated = File.expand_path(File.join("..","Flutter","Generated.xcconfig"), __FILE__)
   raise "Run `flutter pub get` first." unless File.exist?(generated)
   File.foreach(generated) { |line| return $1.strip if line =~ /FLUTTER_ROOT=(.*)/ }
   raise "FLUTTER_ROOT not found in Generated.xcconfig"
 end
 
-require File.expand_path(File.join(flutter_root,'packages','flutter_tools','bin','podhelper'), __FILE__)
+require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
 flutter_ios_podfile_setup
 
-# ✅ Key line: allow Obj-C pods (GoogleUtilities, etc.) to be imported from Swift when linked statically
+# Enable module maps so Swift pods can import Obj-C pods while keeping static linkage
 use_modular_headers!
 
-target 'Runner' do
-  # Keep Flutter's default static linkage for pods (do NOT add use_frameworks!)
+target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # Let Flutter set its standard build flags
   flutter_additional_ios_build_settings(installer)
-
-  # Consistent build settings across configs
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
+      config.build_settings["ENABLE_BITCODE"] = "NO"
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
     end
   end
 end
-"@
-
-$utf8NoBom = New-Object System.Text.UTF8Encoding($false)
-[IO.File]::WriteAllText("ios\Podfile", $pod, $utf8NoBom)
