--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,27 +21,24 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
+# ⛔ DO NOT add use_frameworks! or use_modular_headers! here.
 flutter_ios_podfile_setup
-use_modular_headers!
 
 target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
-  # ---- SAFETY SHIM (prevents crash on old CocoaPods) ----
-  unless installer.respond_to?(:platform_name)
-    def installer.platform_name; "ios"; end
-  end
-  # -------------------------------------------------------
-
   flutter_additional_ios_build_settings(installer)
 
+  # Keep your build settings tidy and modern
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      # (Optional) Helps avoid strict modular-header hiccups if a pod slips one in
+      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
