--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-# ios/Podfile
+# frozen_string_literal: true
 source "https://cdn.cocoapods.org/"
 
 platform :ios, "15.5"
@@ -13,32 +13,32 @@ project "Runner", {
 install! "cocoapods", :warn_for_unused_master_specs_repo => false
 
 def flutter_root
-  generated = File.expand_path(File.join("..","Flutter","Generated.xcconfig"), __FILE__)
+  generated = File.expand_path(File.join("..", "Flutter", "Generated.xcconfig"), __FILE__)
   raise "Run `flutter pub get` first." unless File.exist?(generated)
   File.foreach(generated) { |line| return $1.strip if line =~ /FLUTTER_ROOT=(.*)/ }
   raise "FLUTTER_ROOT not found in Generated.xcconfig"
 end
 
-require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
+require File.expand_path(File.join(flutter_root, "packages", "flutter_tools", "bin", "podhelper"), __FILE__)
 
-# ⛔ DO NOT add use_frameworks! or use_modular_headers! here.
 flutter_ios_podfile_setup
 
+# ✅ Fix for "Swift pods cannot yet be integrated as static libraries"
+use_frameworks! :linkage => :dynamic
+
 target "Runner" do
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
 end
 
 post_install do |installer|
   flutter_additional_ios_build_settings(installer)
 
-  # Keep your build settings tidy and modern
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
+  # Keep build settings consistent
+  installer.pods_project.targets.each do |t|
+    t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      # (Optional) Helps avoid strict modular-header hiccups if a pod slips one in
-      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
