--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,17 +23,15 @@ require File.expand_path(File.join(flutter_root, "packages", "flutter_tools", "b
 
 flutter_ios_podfile_setup
 
-# ✅ Fix for "Swift pods cannot yet be integrated as static libraries"
-use_frameworks! :linkage => :dynamic
+# Needed so Swift pods (Firebase*) can import Obj-C deps while remaining static
+use_modular_headers!
 
 target "Runner" do
-  flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   flutter_additional_ios_build_settings(installer)
-
-  # Keep build settings consistent
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
