iOS: CocoaPods 1.15.2 + modular headers + platform_name shim; clean install

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,4 @@
-# frozen_string_literal: true
-source "https://cdn.cocoapods.org/"
+﻿source "https://cdn.cocoapods.org/"
 
 platform :ios, "15.5"
 ENV["COCOAPODS_DISABLE_STATS"] = "true"
@@ -13,17 +12,14 @@ project "Runner", {
 install! "cocoapods", :warn_for_unused_master_specs_repo => false
 
 def flutter_root
-  generated = File.expand_path(File.join("..", "Flutter", "Generated.xcconfig"), __FILE__)
+  generated = File.expand_path(File.join("..","Flutter","Generated.xcconfig"), __FILE__)
   raise "Run `flutter pub get` first." unless File.exist?(generated)
   File.foreach(generated) { |line| return $1.strip if line =~ /FLUTTER_ROOT=(.*)/ }
   raise "FLUTTER_ROOT not found in Generated.xcconfig"
 end
 
-require File.expand_path(File.join(flutter_root, "packages", "flutter_tools", "bin", "podhelper"), __FILE__)
+require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-flutter_ios_podfile_setup
-
-# Needed so Swift pods (Firebase*) can import Obj-C deps while remaining static
 use_modular_headers!
 
 target "Runner" do
@@ -31,7 +27,19 @@ target "Runner" do
 end
 
 post_install do |installer|
+  # Shim for older Flutter podhelper that expects installer.platform_name
+  unless installer.respond_to?(:platform_name)
+    module Pod
+      class Installer
+        def platform_name
+          (aggregate_targets.first&.platform&.name || :ios)
+        end
+      end
+    end
+  end
+
   flutter_additional_ios_build_settings(installer)
+
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
