--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,28 +1,31 @@
-﻿source "https://cdn.cocoapods.org/"
+source 'https://cdn.cocoapods.org/'
 
-platform :ios, "15.5"
-ENV["COCOAPODS_DISABLE_STATS"] = "true"
+platform :ios, '15.5'
+ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-project "Runner", {
-  "Debug" => :debug,
-  "Profile" => :release,
-  "Release" => :release,
+project 'Runner', {
+  'Debug' => :debug,
+  'Profile' => :release,
+  'Release' => :release,
 }
 
-install! "cocoapods", :warn_for_unused_master_specs_repo => false
+install! 'cocoapods', :warn_for_unused_master_specs_repo => false
 
 def flutter_root
-  generated = File.expand_path(File.join("..","Flutter","Generated.xcconfig"), __FILE__)
-  raise "Run `flutter pub get` first." unless File.exist?(generated)
-  File.foreach(generated) { |line| return $1.strip if line =~ /FLUTTER_ROOT=(.*)/ }
-  raise "FLUTTER_ROOT not found in Generated.xcconfig"
+  generated = File.expand_path(File.join('..','Flutter','Generated.xcconfig'), __FILE__)
+  raise 'Run `flutter pub get` first.' unless File.exist?(generated)
+  File.foreach(generated) do |line|
+    m = line.match(/FLUTTER_ROOT=(.*)/)
+    return m[1].strip if m
+  end
+  raise 'FLUTTER_ROOT not found in Generated.xcconfig'
 end
 
-require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
+require File.expand_path(File.join(flutter_root,'packages','flutter_tools','bin','podhelper'), __FILE__)
 
 use_modular_headers!
 
-target "Runner" do
+target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
@@ -38,13 +41,23 @@ post_install do |installer|
     end
   end
 
-  flutter_additional_ios_build_settings(installer)
+  # Support both old and new flutter_additional_ios_build_settings signatures
+  if defined?(flutter_additional_ios_build_settings)
+    begin
+      flutter_additional_ios_build_settings(installer) # newer Flutter
+    rescue ArgumentError, NoMethodError
+      installer.pods_project.targets.each do |t|       # older Flutter
+        flutter_additional_ios_build_settings(t)
+      end
+    end
+  end
 
+  # Extra build settings for all pods
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
-      config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
-      config.build_settings["ENABLE_BITCODE"] = "NO"
-      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
     end
   end
 end
