--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,10 +23,20 @@ end
 
 require File.expand_path(File.join(flutter_root,'packages','flutter_tools','bin','podhelper'), __FILE__)
 
-use_modular_headers!
-
 target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
+  # Make ONLY the Firebase/Interop pods modular (Swift needs modules).
+  pod 'FirebaseAuth',              :modular_headers => true
+  pod 'FirebaseCore',              :modular_headers => true
+  pod 'FirebaseCoreInternal',      :modular_headers => true
+  pod 'FirebaseCoreExtension',     :modular_headers => true
+  pod 'FirebaseFirestore',         :modular_headers => true
+  pod 'FirebaseStorage',           :modular_headers => true
+  pod 'GoogleUtilities',           :modular_headers => true
+  pod 'FirebaseAppCheckInterop',   :modular_headers => true
+  pod 'FirebaseAuthInterop',       :modular_headers => true
+  pod 'RecaptchaInterop',          :modular_headers => true
 end
 
 post_install do |installer|
@@ -52,12 +62,13 @@ post_install do |installer|
     end
   end
 
-  # Extra build settings for all pods
   installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      # Be permissive with some older headers (avoids module import nits)
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
     end
   end
 end
