--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,5 @@
-﻿source "https://cdn.cocoapods.org/"
+@'
+source "https://cdn.cocoapods.org/"
 
 platform :ios, "15.5"
 ENV["COCOAPODS_DISABLE_STATS"] = "true"
@@ -20,10 +21,10 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# Needed by Swift pods like Firebase* when their deps don't define modules
+# Needed by Swift pods (Firebase et al.) when deps don’t define modules
 use_modular_headers!
 
-# Keep frameworks static to play well with Flutter + gRPC/Firebase
+# Keep frameworks static for Flutter + gRPC/Firebase
 use_frameworks! :linkage => :static
 
 target "Runner" do
@@ -42,10 +43,11 @@ post_install do |installer|
     end
   end
 
-  flutter_additional_ios_build_settings(installer)
-
-  # Cohesive build settings for all pods
+  # ✅ Call Flutter helper per-target (NOT with the installer)
   installer.pods_project.targets.each do |t|
+    flutter_additional_ios_build_settings(t)
+
+    # Cohesive build settings
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
@@ -53,3 +55,4 @@ post_install do |installer|
     end
   end
 end
+'@ | Set-Content -NoNewline ios\Podfile -Encoding UTF8
