--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,6 @@
-@'
+cd C:\flutter_projects\first_flutter_app
+
+$podfile = @'
 source "https://cdn.cocoapods.org/"
 
 platform :ios, "15.5"
@@ -21,10 +23,10 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# Needed by Swift pods (Firebase et al.) when deps don’t define modules
+# Needed by Swift pods like Firebase when deps don't define modules
 use_modular_headers!
 
-# Keep frameworks static for Flutter + gRPC/Firebase
+# Keep frameworks static to play well with Flutter + gRPC/Firebase
 use_frameworks! :linkage => :static
 
 target "Runner" do
@@ -43,11 +45,10 @@ post_install do |installer|
     end
   end
 
-  # ✅ Call Flutter helper per-target (NOT with the installer)
-  installer.pods_project.targets.each do |t|
-    flutter_additional_ios_build_settings(t)
+  flutter_additional_ios_build_settings(installer)
 
-    # Cohesive build settings
+  # Cohesive build settings for all pods
+  installer.pods_project.targets.each do |t|
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
@@ -55,4 +56,7 @@ post_install do |installer|
     end
   end
 end
-'@ | Set-Content -NoNewline ios\Podfile -Encoding UTF8
+'@
+
+# Write as UTF-8 (no BOM), with straight quotes, no stray @'
+$podfile | Set-Content ios\Podfile -Encoding UTF8
