--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,5 +1,7 @@
-$gemfile = @'
+cd C:\flutter_projects\first_flutter_app
+
+# Write a minimal Gemfile that pins CocoaPods
+@"
 source "https://rubygems.org"
 gem "cocoapods", "1.15.2"
-'@
-$gemfile | Set-Content ios\Gemfile -Encoding UTF8
+"@ | Set-Content ios\Gemfile -Encoding ASCII
