--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,8 +20,7 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# Build pods as static libraries and ensure module maps for Swift pods (Firebase, etc.)
-use_modular_headers!
+# NOTE: no `use_frameworks!` and no `use_modular_headers!`
 
 target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
@@ -39,13 +38,17 @@ post_install do |installer|
     end
   end
 
-  # Apply Flutter?s extra build settings per target
   installer.pods_project.targets.each do |t|
+    # Apply Flutter’s extra settings PER TARGET (not on installer)
     flutter_additional_ios_build_settings(t)
+
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+
+      # Allow non-modular headers inside Swift frameworks to avoid plugin noise
+      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
