--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,7 +27,6 @@ target "Runner" do
 end
 
 post_install do |installer|
-  # Shim for older Flutter podhelper that expects installer.platform_name
   unless installer.respond_to?(:platform_name)
     module Pod
       class Installer
@@ -39,15 +38,13 @@ post_install do |installer|
   end
 
   installer.pods_project.targets.each do |t|
-    # Apply Flutter’s extra settings PER TARGET (not on installer)
+    # Apply Flutter?s extra settings PER TARGET
     flutter_additional_ios_build_settings(t)
 
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-
-      # Allow non-modular headers inside Swift frameworks to avoid plugin noise
       config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
