--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,13 +20,15 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# NOTE: no `use_frameworks!` and no `use_modular_headers!`
+# ✅ Needed so Swift Firebase pods (Auth/Core/Storage/Firestore) get module maps
+use_modular_headers!
 
 target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
+  # Shim for older Flutter podhelper that expects installer.platform_name
   unless installer.respond_to?(:platform_name)
     module Pod
       class Installer
@@ -37,15 +39,15 @@ post_install do |installer|
     end
   end
 
+  # Apply Flutter extras per target + unify a few settings
   installer.pods_project.targets.each do |t|
-    # Apply Flutter?s extra settings PER TARGET
     flutter_additional_ios_build_settings(t)
-
     t.build_configurations.each do |config|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+      # Optional: keeps Xcode quiet if any header is non-modular
+      # config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
