--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,7 +20,7 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# ✅ Needed so Swift Firebase pods (Auth/Core/Storage/Firestore) get module maps
+# Needed so Swift Firebase pods (Auth/Core/Storage/Firestore) get module maps
 use_modular_headers!
 
 target "Runner" do
@@ -46,8 +46,8 @@ post_install do |installer|
       config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
       config.build_settings["ENABLE_BITCODE"] = "NO"
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      # Optional: keeps Xcode quiet if any header is non-modular
-      # config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+      # If any plugin still has a straggler header, this keeps Xcode calm:
+      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
