--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,10 +18,13 @@ def flutter_root
   raise "FLUTTER_ROOT not found in Generated.xcconfig"
 end
 
-require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
+require File.expand_path(File.join(flutter_root, "packages", "flutter_tools", "bin", "podhelper"), __FILE__)
 
-# Needed so Swift Firebase pods (Auth/Core/Storage/Firestore) get module maps
+# ✅ Swift Firebase pods need module maps
 use_modular_headers!
+
+# ✅ Build pods as static frameworks (fixes gRPC modulemap issues)
+use_frameworks! :linkage => :static
 
 target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
@@ -39,15 +42,16 @@ post_install do |installer|
     end
   end
 
-  # Apply Flutter extras per target + unify a few settings
+  # Apply Flutter extras per target + unify build settings
   installer.pods_project.targets.each do |t|
     flutter_additional_ios_build_settings(t)
     t.build_configurations.each do |config|
-      config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
-      config.build_settings["ENABLE_BITCODE"] = "NO"
-      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      # If any plugin still has a straggler header, this keeps Xcode calm:
-      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+      s = config.build_settings
+      s["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
+      s["ENABLE_BITCODE"] = "NO"
+      s["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      # ✅ Prevent “non-modular header inside framework module” warnings
+      s["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
     end
   end
 end
