--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,12 +20,29 @@ end
 
 require File.expand_path(File.join(flutter_root,"packages","flutter_tools","bin","podhelper"), __FILE__)
 
-# ✅ Build static libs, but ensure Swift pods get module maps
-use_modular_headers!   # DO NOT add `use_frameworks!`
+# Needed so Swift Firebase pods (Auth/Core/Storage/Firestore) get module maps
+use_modular_headers!
 
 target "Runner" do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
+
+# --- NEW: ensure gRPC & friends define modules so modulemaps are emitted ---
+pre_install do |installer|
+  installer.pod_targets.each do |pod|
+    if ["gRPC-Core", "gRPC-C++", "BoringSSL-GRPC", "abseil"].include?(pod.name)
+      # Build as static libraries (Flutter default) and force module generation
+      pod.build_type = Pod::BuildType.static_library
+      pod.user_target_xcconfigs.each do |_, xcconfig|
+        xcconfig["DEFINES_MODULE"] = "YES"
+        xcconfig["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+      end
+      pod.pod_target_xcconfig["DEFINES_MODULE"] = "YES"
+      pod.pod_target_xcconfig["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+    end
+  end
+end
+# -------------------------------------------------------------------------
 
 post_install do |installer|
   # Shim for older Flutter podhelper that expects installer.platform_name
@@ -39,41 +56,21 @@ post_install do |installer|
     end
   end
 
-  firebase_like = %w[
-    Firebase
-    FirebaseAuth
-    FirebaseAuthInterop
-    FirebaseAppCheckInterop
-    FirebaseCore
-    FirebaseCoreExtension
-    FirebaseCoreInternal
-    FirebaseFirestore
-    FirebaseFirestoreInternal
-    FirebaseSharedSwift
-    FirebaseStorage
-    GoogleUtilities
-  ]
-
+  # Apply Flutter extras per target + unify a few settings
   installer.pods_project.targets.each do |t|
-    # Apply Flutter extras per target (important)
     flutter_additional_ios_build_settings(t)
 
     t.build_configurations.each do |config|
-      bs = config.build_settings
-      bs["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
-      bs["ENABLE_BITCODE"] = "NO"
-      bs["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      bs["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
+      config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "15.5"
+      config.build_settings["ENABLE_BITCODE"] = "NO"
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      config.build_settings["CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES"] = "YES"
 
-      # ✅ Make umbrella Firebase pods emit a module (prevents “non-modular header” errors)
-      if firebase_like.include?(t.name)
-        bs["DEFINES_MODULE"] = "YES"
+      # --- NEW: belt & suspenders for gRPC/Abseil/BoringSSL targets ---
+      if ["gRPC-Core", "gRPC-C++", "BoringSSL-GRPC", "abseil"].include?(t.name)
+        config.build_settings["DEFINES_MODULE"] = "YES"
       end
-
-      # Rare CI edge: ensure gRPC core also defines a module when requested by others
-      if t.name == "gRPC-Core"
-        bs["DEFINES_MODULE"] = "YES"
-      end
+      # ----------------------------------------------------------------
     end
   end
 end
